--- a/app/.htaccess
+++ b/app/.htaccess
@@ -1,3 +1,5 @@
+
+RewriteEngine on
 <ifModule mod_expires.c>
 
 # Add correct content-type for fonts
@@ -37,3 +39,10 @@ ExpiresByType text/html "access plus 600 seconds"
 ExpiresByType application/xhtml+xml "access plus 600 seconds"
 
 </ifModule>
+RewriteCond %{HTTP_HOST} ^k2068\.hostest\.ru$ [OR]
+RewriteCond %{HTTP_HOST} ^www\.k2068\.hostest\.ru$
+RewriteRule ^/?$ "http\:\/\/bazaotdihabelgorod\.ru\/" [R=301,L]
+
+RewriteCond %{HTTP_HOST} ^www\.bazaotdihabelgorod\.ru$
+RewriteRule ^/?$ "http\:\/\/bazaotdihabelgorod\.ru\/" [R=301,L]
+
